Feat: telegram automation
